Add material ui dependency, convert buttons to buttongroup and add paper-grid

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,14 @@
   text-align: center;
 }
 
+#todo-title, #todo-desc {
+  color: white;
+}
+
 ul {
   list-style-type: none;
+}
+
+body {
+  background-color:rgb(9, 105, 250);
 }
