--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,13 @@
   color: white;
 }
 
+li {
+  margin: 0 30px 0px 30px;
+  border: 1px solid rgba(131, 128, 128, 0.171);
+}
+
 ul {
+  padding: 0;
   list-style-type: none;
 }
 
